src/components/visualizer/visualizers.scss
#simpleSlider[hidden],
#inputSurfer[hidden],
#barSurfer[hidden] ::part(wrapper),
#barSurfer>div.mdl-slider-background-flex-container,
#barSurfer>input.nowPlayingBarPositionSlider,
#barSurfer>div.sliderBubbleTrack {
    display: none;
}

#barSurfer[hidden]>div.mdl-slider-background-flex-container,
#barSurfer[hidden]>input.nowPlayingBarPositionSlider,
#barSurfer[hidden]>div.sliderBubbleTrack {
    display: unset;
}

#barSurfer ::part(wrapper) {
    display: block;
    width: 100vw;
}

#barSurfer ::part(cursor) {
    border-radius: 10px;
}

#inputSurfer,
#simpleSlider {
    height: 6rem;
    margin-bottom: 2rem;
    margin-top: 0rem;
    max-width: 85vw;
}

.nowPlayingVolumeSliderContainer {
    flex: 1;
    flex-wrap: nowrap;
}

.volumecontrol.hide {
    display: flex;
    flex: 1;
    flex-wrap: nowrap;
}

div.skinBody>#musicPage,
.page.mainAnimatedPage.libraryPage.withTabs {
    margin-top: 6rem !important;
    scroll-behavior: smooth;
}

div.skinBody>#musicPage,
div.flex.align-items-center.justify-content-center.flex-wrap-wrap.padded-top.padded-left.padded-right.padded-bottom.focuscontainer-x.padPagination.MuiBox-root.css-0 {
    scroll-behavior: smooth;
    padding-bottom: 12rem !important;
}


@media (min-width: 690px) and (orientation: portrait) {

    #inputSurfer {
        height: 5rem;
        margin-bottom: 1rem;
        margin-top: -0.5rem;
        max-width: 75vw;
    }

    #simpleSlider {
        height: 2rem;
        margin-bottom: 0rem;
        margin-top: 1rem;
        max-width: 75vw;
    }
}

@media (orientation: landscape) and (max-width: 1599px) {
    #nowPlayingPage .nowPlayingPageImageContainer {
        width: 75vh;
        max-width: 33.33vw;
    }

    #inputSurfer {
        height: 33.33vh;
        margin-bottom: 1rem;
        margin-top: -1rem;
        max-width: calc(94vw - 75vh);
        min-width: 60vw;
    }

}

@media (min-width: 1600px) {

    #inputSurfer,
    #simpleSlider {
        height: 136px;
        margin: 0;
        position: fixed;
        left: 0;
        right: 0;
        max-width: 100vw;
        bottom: 1.5rem;
    }

    #simpleSlider {
        padding-left: 5rem;
        padding-right: 5rem;
    }
}


.nowPlayingInfoContainer {
    height: calc(98% - 4.2em);
}

canvas#visualizer {
    position: fixed;
    z-index: -1;
    opacity: 0.4;
    transition: opacity 1.4s ease-in-out;
}

body.mouseIdle canvas#visualizer {
    opacity: 0.55;
    transition: opacity 6s ease-in-out;
    transition-delay: 20s;
}

@media(min-width:1600px) {
    .backgroundContainer.withBackdrop {
        opacity: 0.8;
        transition: opacity 1.4s ease-in-out;
    }

    #playlist>div.listItem:hover>div.listViewUserDataButtons,
    #playlist>div.listItem:hover>div.listItemImage.itemAction.lazy,
    #playlist>div.listItem:hover>span {
        opacity: 1;
    }

    #playlist>div>div.listViewUserDataButtons,
    #playlist>div.listItem div.listItemImage.itemAction.lazy,
    #playlist>div>span {
        opacity: 0;
    }

    #playlist {
        padding-top: 190px;
        padding-bottom: 200px;
    }

    @keyframes slideIn {
        0% {
            transform: translateX(-50vw);
        }

        100% {
            transform: translateX(0);
        }
    }

    .nowPlayingInfoControls>.infoContainer {
        position: fixed;
        bottom: 22rem;
        left: -0.2em;
        background-color: black;
        padding: 2rem;
        padding-left: 34rem;
        padding-right: 4rem;
        transition: transform 4s ease-in-out;
        border-radius: .2em;
        transition-delay: 0s;
        animation: slideIn 4s forwards;
        /* Add this line */
    }

    body.mouseIdle .nowPlayingInfoControls>.infoContainer {
        transition: transform 4s ease-in-out;
        transform: translateX(-50vw);
        transition-delay: 15s;
    }


    header,
    .skinHeader,
    div#itemDetailPage,
    div#musicPage,
    div#indexPage,
    body.mouseIdle .nowPlayingInfoContainer>.nowPlayingInfoControls>canvas#visualizer,
    .nowPlayingInfoContainer>.nowPlayingInfoControls,
    .nowPlayingInfoContainer>.nowPlayingPageImageContainer {
        opacity: 1;
        transition: opacity 1s ease-in-out;
        transition-delay: 0s;
    }

    body.mouseIdle header,
    body.mouseIdle .skinHeader,
    body.mouseIdle div#itemDetailPage,
    body.mouseIdle div#musicPage,
    body.mouseIdle div#indexPage,
    body.mouseIdle .nowPlayingInfoContainer>.nowPlayingInfoControls,
    body.mouseIdle .nowPlayingInfoContainer>.nowPlayingPageImageContainer {
        opacity: 0;
        transition: opacity 1.5s ease-out;
        transition-delay: 25s;
    }

    body.mouseIdle .backgroundContainer.withBackdrop {
        opacity: 0.3;
        transition: opacity 8s ease-in-out;
        transition-delay: 20s;
    }

    .nowPlayingInfoContainer {
        height: unset;
    }

    .volumecontrol.hide {
        display: unset;
        flex: unset;
    }

    .playlist.vertical-list.nowPlayingPlaylist.hide {
        display: flex;
    }

    .itemsContainer-tv>.squareCard,
    .itemsContainer>.squareCard {
        width: calc(100%/5);
    }

    #playlist>div .listItemImage.itemAction.lazy {
        opacity: 0;
        animation: none;
    }

    body.mouseIdle .playlistSection {
        width: 16.5rem;
        opacity: 1;
        direction: rtl;
    }

    div.playlistSection {
        bottom: 13.3rem;
        font-size: .75em;
        max-height: 300px;
        overflow: auto;
        padding: 0;
        padding-left: 2.5rem;
        padding-right: 2rem;
        position: fixed;
        right: 0;
        scrollbar-width: none;
        width: 32rem;
    }

    .nowPlayingInfoContainer>.nowPlayingPageImageContainer {
        width: 400px;
        margin-right: 3rem;
    }

    .nowPlayingPageImage {
        position: absolute;
        z-index: 2;
    }

    .mediaInfoItem {
        min-width: 1.5rem;
    }

    .listItem.listItem-border {
        border: none !important;
        border-style: none !important;
        border-color: rgb(255 255 255 / 0%) !important;
    }

    .nowPlayingInfoContainer>.nowPlayingInfoControls {
        bottom: 3.8rem;
        height: 63px;
        left: 7.2rem;
        margin: 0;
        position: fixed;
        width: 90vw;
        z-index: -1;
    }

    .nowPlayingInfoContainerMedia {
        margin-bottom: 0;
    }

    body::-webkit-scrollbar,
    body.mouseIdle .nowPlayingInfoContainer>.nowPlayingInfoControls>.nowPlayingButtonsContainer,
    body.mouseIdle .playlistSection>div.playlistSectionButton,
    body.mouseIdle .listViewUserDataButtons,
    body.mouseIdle .listViewDragHandle.material-icons.listItemIcon.drag_handle,
    body.mouseIdle .remoteControlSection {
        display: none;
    }

    html {
        scrollbar-width: none;
    }

    .nowPlayingInfoContainer {
        bottom: 12rem;
        left: 6rem;
        max-width: 60rem;
        position: fixed;
    }

    .sliderContainer.flex {
        position: fixed;
        bottom: 1rem;
        left: 2.8rem;
        right: 2.8rem;
        font-size: 0.6em;
    }

    #playlist>button {
        height: 1.5rem;
    }

    .listItemImage.playlistIndexIndicatorImage {
        background-size: 2em !important;
        bottom: 0.3em;
        opacity: unset;
    }

    .listItemBodyText {
        margin: 0;
        overflow: hidden;
        padding: .1em 0;
        text-overflow: ellipsis;
        white-space: pre;
        direction: ltr;
    }
}

@media (min-width: 1600px) {

    .layout-desktop,
    .scrollY {
        scrollbar-width: none;
    }
}

